--- a/README.mkd
+++ b/README.mkd
@@ -2,7 +2,8 @@
 
 Easily interact with tmux from vim.
 
-![vimux](https://www.braintreepayments.com/assets/images/blog/vimux3.png)
+## Foreward
+This is my own fork of vimux which internally makes use of pane IDs rather than indexes meaning that commands always go to the same pane regardless of any changes made to the tmux window.
 
 What inspired me to write vimux was [tslime.vim](https://github.com/kikijump/tslime.vim), a plugin that lets you send input to tmux. While tslime.vim works well, I felt it wasn't optimized for my primary use case which was having a smaller tmux pane that I would use to run tests or play with a REPL.
 
@@ -12,10 +13,9 @@ Other auxiliary functions and the ones I talked about above can be found bellow 
 
 ## Installation
 
-With **[vim-bundle](https://github.com/benmills/vim-bundle)**: `vim-bundle install benmills/vimux`
-With **[Vundle](https://github.com/gmarik/Vundle.vim)**: 'Plugin benmills/vimux' in your .vimrc
-
-Otherwise download the latest [tarball](https://github.com/benmills/vimux/tarball/master), extract it and move `plugin/vimux.vim` inside `~/.vim/plugin`. If you're using [pathogen](https://github.com/tpope/vim-pathogen), then move the entire folder extracted from the tarball into `~/.vim/bundle`.
+- With **[pathogen](https://github.com/tpope/vim-pathogen)**: `cd ~/.vim/bundle && git clone https://github.com/myinitialsarepm/vimux.git`
+- With **[vim-bundle](https://github.com/benmills/vim-bundle)**: `vim-bundle install benmills/vimux`
+- With **[Vundle](https://github.com/gmarik/Vundle.vim)**: 'Plugin benmills/vimux' in your .vimrc
 
 _Notes:_ 
 
