--- a/README.mkd
+++ b/README.mkd
@@ -2,7 +2,7 @@
 
 Easily interact with tmux from vim.
 
-## Foreward
+## Foreword
 This is my own fork of vimux which internally makes use of pane IDs rather than indexes meaning that commands always go to the same pane regardless of any changes made to the tmux window.
 
 What inspired me to write vimux was [tslime.vim](https://github.com/kikijump/tslime.vim), a plugin that lets you send input to tmux. While tslime.vim works well, I felt it wasn't optimized for my primary use case which was having a smaller tmux pane that I would use to run tests or play with a REPL.
